
	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

0.96.4	XXX

	* The bash-dependent contrib/* scripts were changed so they may now
	  work on regular POSIX compliant sh (NOTE: Solaris has a POSIX sh in
	  /usr/xpg4/bin/sh, the one in /bin/sh is junk!)

	* The contrib/ directory is now managed by the top-level Makefile.am,
	  which removes one "make" recursion. This implies that "bogogrep" is
	  now built on the top level rather than in contrib/.

	* Renamed all contrib/ scripts to that their suffix gives a hint what
	  kind of script it is (.pl, .sh).

	* Recognize all image/ types as opaque data that we do not parse,
	  rather than just image/bmp.

0.96.3	2005-10-25 (a.k.a. 1.0.0-rc3)

	* Don't decode mime-audio and mime-video attachments.
	* Remove unused CP866 code.

	2005-10-23

	* Fix possible SIGSEGV with long html comments.
 
	2005-10-22

	* Don't decode mime-image and mime-application attachments.
 
	2005-10-21

	* Avoid pointer use after freeing its memory.
	* Avoid buffer overflow during conversion to unicode.

	2005-10-15

	* Fix program abort when bad options are used.
	* Remove unused Berkeley DB locking options.

	2005-10-12

	* Fixed sqlite build option in bogofilter.spec.in 
	  (contributed by Tobias Roppelt)

	2005-10-07

	* Added contrib scripts bfproxy, spamitarium, and stripsearch
	  (contributed by Tom Anderson)

0.96.2	2005-10-06 - Promoted to Stable Release
        2005-09-25 (a.k.a. 1.0.0-rc2)

	2005-09-25

	* SQLite3 - no longer using EXCLUSIVE in BEGIN TRANSACTION as
	  it seems unnecessary and it causes trouble on MAC OSX

	2005-09-19

	* Require sqlite 3.2.6 and print warning if older version installed, to